docs : markdown conversion ended, new chapters added

--- a/docs/diapo_style.css
+++ b/docs/diapo_style.css
@@ -71,3 +71,7 @@
 .reveal section img.image-emoji {
   max-height: 15vh !important;
 }
+
+.reveal section img.image-large {
+  max-height: 50vh !important;
+}
